# bean-factory

./: Cargo.toml  README.md
.github/workflows/: release.yml
actix-inject-derive/: Cargo.toml
actix-inject-derive/src/: lib.rs
bean-factory-derive/: Cargo.toml
bean-factory-derive/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
src/: lib.rs
src/factory/: mod.rs  model.rs
tests/: factory.rs
