[workspace]
members = [
    ".",
    "bean-factory-derive",
]

[package]
name = "bean_factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
log = "0.4"
dashmap = "4"
once_cell = "1.8"
inventory = "0.1.10"

bean_factory_derive= { path = "./bean-factory-derive", version="0.1.0"}
