[workspace]
members = [
    ".",
    "bean-factory-derive",
]

[package]
name = "bean_factory"
version = "0.1.2"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "A rust bean factory,support inject reference bean"
repository = "https://gitee.com/hqp/bean-factory"
readme = "README.md"
keywords = ["bean", "factory","inject"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
log = "0.4"
dashmap = "4"
once_cell = "1.8"
inventory = "0.1.10"

bean_factory_derive= { path = "./bean-factory-derive", version="0.1.2"}
