[package]
name = "bean_factory_derive"
version = "0.1.2"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "bean-factory-derive"
repository = "https://gitee.com/hqp/bean-factory"
readme = "../README.md"
keywords = ["bean", "factory","inject"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
